src/test/ui/const-generics/defaults/const-defaults-order.min.stderr
error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:24:11
   |
LL |     const O: usize = 0,
   |           ^^^^^^^^^^^^

error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:28:11
   |
LL |     const P: usize = 1
   |           ^^^^^^^^^^^^

error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:47:5
   |
LL |     V = u8,
   |     ^^^^^^

error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:50:11
   |
LL |     const O: usize = 0,
   |           ^^^^^^^^^^^^

error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:57:5
   |
LL |     W: 'b = i8,
   |     ^^^^^^^^^^

error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:63:11
   |
LL |     const P: usize = 1,
   |           ^^^^^^^^^^^^

error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/const-defaults-order.rs:67:11
   |
LL |     const M: usize,
   |           ^

error: lifetime parameters must be declared prior to defaulted parameters
  --> $DIR/const-defaults-order.rs:54:5
   |
LL |   struct BadOrdering<
   |  ___________________-
LL | |     'a,
LL | |     T,
LL | |     const N: usize,
...  |
LL | |     'b: 'a,
   | |     ^^
...  |
LL | |
LL | | >(
   | |_- help: reorder the parameters: `<'a, 'b: 'a, T, U: 'b, const N: usize, const M: usize, V = u8, const O: usize = 0, W: 'b = i8, const P: usize = 1>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts, then defaulted parameters

error: type parameters must be declared prior to defaulted parameters
  --> $DIR/const-defaults-order.rs:60:5
   |
LL |   struct BadOrdering<
   |  ___________________-
LL | |     'a,
LL | |     T,
LL | |     const N: usize,
...  |
LL | |     U: 'b,
   | |     ^
...  |
LL | |
LL | | >(
   | |_- help: reorder the parameters: `<'a, 'b: 'a, T, U: 'b, const N: usize, const M: usize, V = u8, const O: usize = 0, W: 'b = i8, const P: usize = 1>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts, then defaulted parameters

error: const parameters must be declared prior to defaulted parameters
  --> $DIR/const-defaults-order.rs:67:11
   |
LL |   struct BadOrdering<
   |  ___________________-
LL | |     'a,
LL | |     T,
LL | |     const N: usize,
...  |
LL | |     const M: usize,
   | |           ^
LL | |
LL | |
LL | | >(
   | |_- help: reorder the parameters: `<'a, 'b: 'a, T, U: 'b, const N: usize, const M: usize, V = u8, const O: usize = 0, W: 'b = i8, const P: usize = 1>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts, then defaulted parameters

error[E0658]: default values for const generic parameters are experimental
  --> $DIR/const-defaults-order.rs:24:20
   |
LL |     const O: usize = 0,
   |                    ^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error[E0658]: default values for const generic parameters are experimental
  --> $DIR/const-defaults-order.rs:28:20
   |
LL |     const P: usize = 1
   |                    ^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error[E0658]: default values for const generic parameters are experimental
  --> $DIR/const-defaults-order.rs:50:20
   |
LL |     const O: usize = 0,
   |                    ^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error[E0658]: default values for const generic parameters are experimental
  --> $DIR/const-defaults-order.rs:63:20
   |
LL |     const P: usize = 1,
   |                    ^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0658`.
